--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Автоматизация бизнес-процессов и ИИ-ассистенты в Кыргызстане</title>
+    <title>SMART flow: Автоматизация бизнес-процессов и ИИ-ассистенты в Кыргызстане</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
         <div class="container">
-            <div class="logo"><img src="images/logo.png" alt="AI-Masters KG logo">AI-Masters KG</div>
+            <div class="logo"><img src="images/logo.png" alt="SMART flow logo">SMART flow</div>
             <nav class="main-nav">
                 <ul>
                     <li><a href="#problems">Проблемы</a></li>
@@ -34,7 +34,7 @@
     <main>
         <section class="hero" style="background-image: url('images/background.jpg');">
             <div class="container">
-                <h1>Ваш бизнес работает 24/7, а вы — отдыхаете. Автоматизация бизнес-процессов и ИИ-ассистенты в Кыргызстане</h1>
+                <h1>Ваш бизнес работает 24/7, а вы — отдыхаете!</h1>
                 <p>Перестаньте терять деньги на рутине. Внедрим интеллектуальные системы, которые сократят ваши расходы до 40% и освободят время для стратегических задач.</p>
                 <a href="#contact-form" class="cta-button">Получить консультацию</a>
             </div>
@@ -42,13 +42,14 @@
 
         <section id="problems" class="problems">
             <div class="container">
-                <h2>Ваши сотрудники утопают в рутине, а бизнес теряет прибыль?</h2>
+                <h2>Знакомые проблемы?</h2>
                 <ul>
-                    <li>Сотрудники тратят часы на однотипные задачи (обработка заявок, отчеты, рассылки).</li>
-                    <li>Теряются клиенты из-за медленной реакции менеджеров.</li>
-                    <li>Человеческий фактор приводит к ошибкам и убыткам.</li>
-                    <li>Сложно контролировать все процессы и анализировать эффективность.</li>
-                    <li>Расходы на персонал растут, а производительность — нет.</li>
+                    <li><strong>Снижение эффективности:</strong> Сотрудники тратят часы на однотипные задачи (обработка заявок, отчеты, рассылки)</li>
+                    <li><strong>Ошибки и неточности:</strong> Человеческий фактор приводит к ошибкам и убыткам</li>
+                    <li><strong>Низкая прозрачность:</strong> Расходы на персонал растут, а производительность — нет</li>
+                    <li><strong>Плохой клиентский опыт:</strong> Теряются клиенты из-за медленной реакции менеджеров</li>
+                    <li><strong>Отсутствие аналитики:</strong> Сложно контролировать все процессы и анализировать эффективность</li>
+                    <li><strong>Снижение конкурентоспособности:</strong> Конкуренты уже используют современные технологии</li>
                 </ul>
             </div>
         </section>
@@ -126,13 +127,68 @@
             <div class="container">
                 <h2>Примеры внедрения в компаниях Кыргызстана</h2>
                 <div class="case-studies">
-                    <div class="case">
-                        <h3>Интернет-магазин</h3>
-                        <p>"Автоматизировали обработку заказов и складской учет. Скорость обработки выросла в 5 раз, количество ошибок сократилось до нуля".</p>
+                    <div class="case internet-shop">
+                        <button class="case-button purple">Интернет-магазин</button>
+                        <h3><strong>Автоматизация обработки заказов</strong></h3>
+                        <p>Автоматизировали обработку заказов и складской учет. Скорость обработки выросла в 5 раз, количество ошибок сократилось до нуля.</p>
+                        <div class="case-metrics">
+                            <div class="metric-item">
+                                <span class="metric-value purple">5x</span>
+                                <span class="metric-label">Скорость</span>
+                            </div>
+                            <div class="metric-item">
+                                <span class="metric-value purple">0</span>
+                                <span class="metric-label">Ошибок</span>
+                            </div>
+                        </div>
                     </div>
-                    <div class="case">
-                        <h3>Сфера услуг</h3>
-                        <p>"Внедрили ИИ-ассистента для записи клиентов. Конверсия в запись выросла на 30%, менеджеры разгружены".</p>
+
+                    <div class="case services">
+                        <button class="case-button green">Сфера услуг</button>
+                        <h3><strong>ИИ-ассистент для записи клиентов</strong></h3>
+                        <p>Внедрили ИИ-ассистента для записи клиентов. Конверсия в запись выросла на 30%, менеджеры разгружены и занимаются более важными задачами.</p>
+                        <div class="case-metrics">
+                            <div class="metric-item">
+                                <span class="metric-value green">+30%</span>
+                                <span class="metric-label">Конверсия</span>
+                            </div>
+                            <div class="metric-item">
+                                <span class="metric-value green">24/7</span>
+                                <span class="metric-label">Работа</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="case production">
+                        <button class="case-button orange">Производство</button>
+                        <h3><strong>Интеграция 1С и CRM</strong></h3>
+                        <p>Связали 1С, CRM и складскую систему. Данные синхронизируются автоматически, отчеты формируются в один клик, экономия времени — 15 часов в неделю.</p>
+                        <div class="case-metrics">
+                            <div class="metric-item">
+                                <span class="metric-value orange">15ч</span>
+                                <span class="metric-label">В неделю</span>
+                            </div>
+                            <div class="metric-item">
+                                <span class="metric-value orange">100%</span>
+                                <span class="metric-label">Точность</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="case retail">
+                        <button class="case-button pink">Ритейл</button>
+                        <h3><strong>Аналитическая панель в реальном времени</strong></h3>
+                        <p>Создали дашборд с ключевыми метриками продаж, остатков и прибыли. Руководство принимает решения на основе актуальных данных, а не вчерашних отчетов.</p>
+                        <div class="case-metrics">
+                            <div class="metric-item">
+                                <span class="metric-value pink">Real-time</span>
+                                <span class="metric-label">Данные</span>
+                            </div>
+                            <div class="metric-item">
+                                <span class="metric-value pink">+25%</span>
+                                <span class="metric-label">Прибыль</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -208,14 +264,14 @@
 
     <footer>
         <div class="container">
-            <div class="logo"><img src="images/logo.png" alt="AI-Masters KG logo">AI-Masters KG</div>
+            <div class="logo"><img src="images/logo.png" alt="SMART flow logo">SMART flow</div>
             <div class="contacts">
-                <p>Телефон: +996 (XXX) XXX-XXX</p>
-                <p>Email: info@ai-masters.kg</p>
-                <p>Мессенджеры: <a href="#">WhatsApp</a>, <a href="#">Telegram</a></p>
+                <p>Телефон: +996 555 91 03 52</p>
+                <p>Email: demidovich.dm@gmail.com</p>
+                <p>Мессенджеры: <a href="https://wa.me/996555910352">WhatsApp</a>, <a href="https://t.me/it_pro_kg">Telegram</a></p>
             </div>
             <div class="legal">
-                <p>&copy; 2025 AI-Masters KG. Все права защищены.</p>
+                <p>&copy; 2025 SMART flow. Все права защищены.</p>
                 <a href="#">Политика конфиденциальности</a>
             </div>
         </div>
