--- a/index.html
+++ b/index.html
@@ -197,14 +197,14 @@
         <section id="contact-form" class="contact-form">
             <div class="container">
                 <h2>Узнайте, сколько может сэкономить ваш бизнес</h2>
-                <p>Оставьте заявку и получите бесплатный аудит ваших бизнес-процессов и персональный план автоматизации со расчетом окупаемости в течение 48 часов.</p>
+                <p>Оставьте заявку на автоматизацию или обучение.</p>
                 <form>
                     <input type="text" name="name" placeholder="Имя" required>
                     <input type="tel" name="phone" placeholder="Номер телефона" required>
                     <input type="text" name="whatsapp" placeholder="WhatsApp (username или номер)">
                     <input type="text" name="telegram" placeholder="Telegram (username)">
                     <input type="text" name="company" placeholder="Название компании/сфера деятельности (необязательно)">
-                    <button type="submit" class="cta-button">Получить план автоматизации</button>
+                    <button type="submit" class="cta-button">Отправить заявку</button>
                 </form>
                 <p class="note">Это бесплатно и ни к чему вас не обязывает.</p>
             </div>
