--- a/index.html
+++ b/index.html
@@ -160,17 +160,17 @@
                     </div>
 
                     <div class="case production">
-                        <button class="case-button orange">Производство</button>
-                        <h3><strong>Интеграция 1С и CRM</strong></h3>
-                        <p>Связали 1С, CRM и складскую систему. Данные синхронизируются автоматически, отчеты формируются в один клик, экономия времени — 15 часов в неделю.</p>
+                        <button class="case-button orange">Торговля</button>
+                        <h3><strong>Приложение для торговых агентов</strong></h3>
+                        <p>Создали мобильное приложение для торговли, Данные склада, магазинов и товаров синхронизируются автоматически, отчеты для бухгалтерии формируются в один клик. </p>
                         <div class="case-metrics">
                             <div class="metric-item">
-                                <span class="metric-value orange">15ч</span>
-                                <span class="metric-label">В неделю</span>
+                                <span class="metric-value orange">0</span>
+                                <span class="metric-label">Рекламы</span>
                             </div>
                             <div class="metric-item">
                                 <span class="metric-value orange">100%</span>
-                                <span class="metric-label">Точность</span>
+                                <span class="metric-label">Совместимость</span>
                             </div>
                         </div>
                     </div>
