--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SMART flow: Автоматизация бизнес-процессов и ИИ-ассистенты в Кыргызстане</title>
+    <title>smartflow.kg: Автоматизация бизнес-процессов и ИИ-ассистенты в Кыргызстане</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
         <div class="container">
-            <div class="logo"><img src="images/logo.png" alt="SMART flow logo">SMART flow</div>
+            <div class="logo"><img src="images/logo.png" alt="SMART flow logo">smartflow.kg</div>
             <nav class="main-nav">
                 <ul>
                     <li><a href="#problems">Проблемы</a></li>
@@ -264,14 +264,14 @@
 
     <footer>
         <div class="container">
-            <div class="logo"><img src="images/logo.png" alt="SMART flow logo">SMART flow</div>
+            <div class="logo"><img src="images/logo.png" alt="SMART flow logo">smartflow.kg</div>
             <div class="contacts">
                 <p>Телефон: +996 555 91 03 52</p>
                 <p>Email: demidovich.dm@gmail.com</p>
                 <p>Мессенджеры: <a href="https://wa.me/996555910352">WhatsApp</a>, <a href="https://t.me/it_pro_kg">Telegram</a></p>
             </div>
             <div class="legal">
-                <p>&copy; 2025 SMART flow. Все права защищены.</p>
+                <p>&copy; 2025 smartflow.kg Все права защищены.</p>
                 <a href="#">Политика конфиденциальности</a>
             </div>
         </div>
