--- a/index.html
+++ b/index.html
@@ -3,14 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Автоматизация бизнес-процессов и ИИ-ассистенты в Кыргызстане</title>
+    <title>Автоматизация бизнес-процессов и ИИ-ассистенты в Кыргызстане | smartflow.kg</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
+    <!-- SEO -->
+    <meta name="description" content="smartflow.kg автоматизирует бизнес-процессы и внедряет ИИ-ассистентов для компаний в Кыргызстане. ✅ Сокращаем рутину, ✅ ускоряем заявки, ✅ повышаем прибыль. Получите бесплатную консультацию!">
+    <meta name="keywords" content="автоматизация бизнес-процессов, ИИ-ассистенты, автоматизация бизнеса Кыргызстан, ИИ ассистент Бишкек, внедрение CRM, цифровизация бизнеса, чат-бот для бизнеса, smartflow.kg">
+    <meta name="author" content="smartflow.kg">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Автоматизация бизнес-процессов и ИИ-ассистенты в Кыргызстане | smartflow.kg">
+    <meta property="og:description" content="Интеллектуальная автоматизация бизнеса в Кыргызстане: ИИ-ассистенты, интеграции, аналитика и автоматизация процессов под ключ.">
+    <meta property="og:url" content="https://smartflow.kg/">
+    <meta property="og:site_name" content="smartflow.kg">
+    <meta property="og:image" content="https://smartflow.kg/images/og-smart-flow.jpg">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Автоматизация бизнес-процессов и ИИ-ассистенты | smartflow.kg">
+    <meta name="twitter:description" content="Помогаем бизнесу в Кыргызстане автоматизировать процессы и внедрять ИИ-ассистентов. Узнайте, сколько может сэкономить ваш бизнес.">
+    <meta name="twitter:image" content="https://smartflow.kg/images/og-smart-flow.jpg">
+
+    <!-- JSON-LD LocalBusiness -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "smartflow.kg",
+      "image": "https://smartflow.kg/images/og-smart-flow.jpg",
+      "url": "https://smartflow.kg/",
+      "telephone": "+996555910352",
+      "email": "demidovich.dm@gmail.com",
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "KG",
+        "addressLocality": "Бишкек"
+      },
+      "description": "Автоматизация бизнес-процессов и внедрение ИИ-ассистентов для компаний в Кыргызстане. Интеграции, аналитика, чат-боты и цифровизация под ключ.",
+      "areaServed": "Кыргызстан",
+      "sameAs": [
+        "https://t.me/it_pro_kg",
+        "https://wa.me/996555910352"
+      ]
+    }
+    </script>
 </head>
 <body>
     <header>
         <div class="container">
-            <div class="logo"><img src="images/logo.png" alt="SMART flow logo">smartflow.kg</div>
+            <div class="logo"><a href="/"><img src="images/logo.png" alt="SMART flow logo">smartflow.kg</a></div>
             <nav class="main-nav">
                 <ul>
                     <li><a href="#problems">Проблемы</a></li>
@@ -23,7 +67,7 @@
                 </ul>
             </nav>
             <a href="https://t.me/it_pro_kg" class="cta-button" target="_blank">Связаться</a>
-            <button class="hamburger" id="hamburger">
+            <button class="hamburger" id="hamburger" aria-label="Меню">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
                 </span>
@@ -32,7 +76,7 @@
     </header>
 
     <main>
-        <section class="hero" style="background-image: url('images/background.jpg');">
+        <section class="hero">
             <div class="container">
                 <h1>Ваш бизнес работает 24/7, а вы — отдыхаете!</h1>
                 <p>Перестаньте терять деньги на рутине. Внедрим интеллектуальные системы, которые сократят ваши расходы до 40% и освободят время для стратегических задач.</p>
@@ -41,7 +85,7 @@
         </section>
 
         <section id="problems" class="problems">
-            <div class="container">
+            <article class="container">
                 <h2>Знакомые проблемы?</h2>
                 <ul>
                     <li><strong>Снижение эффективности:</strong> Сотрудники тратят часы на однотипные задачи (обработка заявок, отчеты, рассылки)</li>
@@ -51,11 +95,11 @@
                     <li><strong>Отсутствие аналитики:</strong> Сложно контролировать все процессы и анализировать эффективность</li>
                     <li><strong>Снижение конкурентоспособности:</strong> Конкуренты уже используют современные технологии</li>
                 </ul>
-            </div>
+            </article>
         </section>
 
         <section id="solution" class="solution">
-            <div class="container">
+            <article class="container">
                 <h2>Есть решение — интеллектуальная автоматизация</h2>
                 <p>Мы не просто настраиваем программы. Мы создаем экосистему, где рутинные задачи выполняют ИИ-ассистенты, а люди занимаются развитием бизнеса.</p>
                 <div class="services">
@@ -76,11 +120,11 @@
                         <p>Настраиваем дашборды, которые показывают ключевые метрики вашего бизнеса в реальном времени.</p>
                     </div>
                 </div>
-            </div>
+            </article>
         </section>
 
         <section id="steps" class="steps">
-            <div class="container">
+            <article class="container">
                 <h2>Всего 4 шага к полной автоматизации вашего бизнеса</h2>
                 <ol>
                     <li><span>1</span>Аудит и консультация: Бесплатно изучаем ваши бизнес-процессы и находим "узкие места".</li>
@@ -88,11 +132,11 @@
                     <li><span>3</span>Внедрение и настройка: Разрабатываем и интегрируем ИИ-решения, обучаем ваших сотрудников.</li>
                     <li><span>4</span>Поддержка и развитие: Сопровождаем систему, анализируем результаты и предлагаем улучшения.</li>
                 </ol>
-            </div>
+            </article>
         </section>
 
         <section id="benefits" class="benefits">
-            <div class="container">
+            <article class="container">
                 <h2>Результат, который вы почувствуете в цифрах и во времени</h2>
                 <div class="benefits-list">
                     <div class="benefit">
@@ -120,11 +164,11 @@
                         <p>Ваше личное время и время ключевых сотрудников для стратегического роста.</p>
                     </div>
                 </div>
-            </div>
+            </article>
         </section>
 
         <section id="cases" class="cases">
-            <div class="container">
+            <article class="container">
                 <h2>Примеры внедрения в компаниях Кыргызстана</h2>
                 <div class="case-studies">
                     <div class="case internet-shop">
@@ -191,7 +235,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </article>
         </section>
 
         <section id="contact-form" class="contact-form">
@@ -218,7 +262,7 @@
         </section>
 
         <section id="faq" class="faq">
-            <div class="container">
+            <article class="container">
                 <h2>Часто задаваемые вопросы</h2>
                 <div class="faq-accordion">
                     <div class="faq-item">
@@ -258,7 +302,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </article>
         </section>
     </main>
 
@@ -268,14 +312,14 @@
             <div class="contacts">
                 <p>Телефон: +996 555 91 03 52</p>
                 <p>Email: demidovich.dm@gmail.com</p>
-                <p>Мессенджеры: <a href="https://wa.me/996555910352">WhatsApp</a>, <a href="https://t.me/it_pro_kg">Telegram</a></p>
+                <p>Мессенджеры: <a href="https://wa.me/996555910352">WhatsApp</a>, <a href="https://t.me/it_pro_kg">Telegram</a>, <a href="https://www.instagram.com/smart.flow.kg/" target="_blank">Instagram</a></p>
             </div>
             <div class="legal">
                 <p>&copy; 2025 smartflow.kg Все права защищены.</p>
-                <a href="#">Политика конфиденциальности</a>
+                <a href="privacy-policy.html">Политика конфиденциальности</a>
             </div>
         </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
