--- a/index.html
+++ b/index.html
@@ -306,6 +306,9 @@
         </section>
     </main>
 
+    <div class="fab">
+        <a href="autoidea.html">идеи для автоматизации</a>
+    </div>
     <footer>
         <div class="container">
             <div class="logo"><img src="images/logo.png" alt="SMART flow logo">smartflow.kg</div>
