--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                     <li><a href="#benefits">Выгоды</a></li>
                     <li><a href="#cases">Кейсы</a></li>
                     <li><a href="#faq">Вопросы</a></li>
+                    <li><a href="about.html">О себе</a></li>
                     <li><a href="#contact-form">Контакты</a></li>
                 </ul>
             </nav>
