--- a/autoidea.html
+++ b/autoidea.html
@@ -82,7 +82,7 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
           </svg>
           <img src="images/logo.png" alt="SMART flow logo" style="height: 20px; vertical-align: middle;">
-          <span style="font-size: 1rem; font-weight: 600; color: #9A17E8; text-decoration: none; transition: opacity 0.2s;">smartflow.kg</span>
+          <span style="font-size: 1rem; font-weight: 600; color: #0EC1FF; text-decoration: none; transition: opacity 0.2s;">smartflow.kg</span>
         </a>
       </div>
       
