--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body>
     <header>
         <div class="container">
-            <div class="logo"><a href="/"><img src="images/logo.png" alt="SMART flow logo">smartflow.kg</a></div>
+            <div class="logo"><a href="/"><img src="images/logo.png" alt="SMART flow logo"><span class="logo-text">smartflow.kg</span></a></div>
             <nav class="main-nav">
                 <ul>
                     <li><a href="#problems">Проблемы</a></li>
@@ -312,7 +312,7 @@
     </div>
     <footer>
         <div class="container">
-            <div class="logo"><img src="images/logo.png" alt="SMART flow logo">smartflow.kg</div>
+            <div class="logo"><img src="images/logo.png" alt="SMART flow logo"><span class="logo-text">smartflow.kg</span></div>
             <div class="contacts">
                 <p>Телефон: +996 555 91 03 52</p>
                 <p>Email: demidovich.dm@gmail.com</p>
